--- a/Partmod/Partmod.cbp
+++ b/Partmod/Partmod.cbp
@@ -41,7 +41,7 @@
 			</Target>
 			<Target title="Debug - Linux">
 				<Option platforms="Unix;" />
-				<Option output="../../bin/x32/linux/debug/partmod" prefix_auto="1" extension_auto="1" />
+				<Option output="../../bin/x32/linux/debug/partmodd" prefix_auto="1" extension_auto="1" />
 				<Option object_output="../../obj/x32/linux/debug/partmod" />
 				<Option type="3" />
 				<Option compiler="gcc" />
@@ -56,7 +56,7 @@
 				<Linker>
 					<Add option="-pg" />
 					<Add library="diskio-partmodd" />
-					<Add directory="../../bin" />
+					<Add directory="$(TARGET_OUTPUT_DIR)" />
 				</Linker>
 				<Environment>
 					<Variable name="a" value="b" />
@@ -79,12 +79,12 @@
 					<Add option="-s" />
 					<Add option="-L ../../bin" />
 					<Add library="diskio-partmod" />
-					<Add directory="../../bin" />
+					<Add directory="$(TARGET_OUTPUT_DIR)" />
 				</Linker>
 			</Target>
 			<Target title="Release - Windows x64">
 				<Option platforms="Windows;" />
-				<Option output="../../bin/x64/windows/release/partmod" prefix_auto="1" extension_auto="1" />
+				<Option output="../../bin/x64/windows/release/libpartmod" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="../../bin/x64/windows/release/" />
 				<Option object_output="../../obj/x64/windows/release/partmod" />
 				<Option type="3" />
